# projetoFinanceiroQt

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
controllers/: bancodados.cpp  bancodados.h  gerenciador.cpp  gerenciador.h
models/: conta.cpp  conta.h  despesa.cpp  despesa.h  transacao.cpp  transacao.h  usuario.cpp  usuario.h
